- More varied options to limit city working areas based on culture
- Fix occupied tile sprite being drawn outside cities' limited working areas

- Configurable city work radius
- Fix AI players sometimes spawning nonsensical units when hitting a unit limit
- Pressing the Z key on the city screen toggles the zoom level of the map display

* RELEASE 21
- Allow perfume amounts to be specified as percentages
- Option to limit how many units can share each tile, named limit_units_per_tile
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that
- Option to allow sale of buildings like aqueducts that uncap population growth, named allow_sale_of_aqueducts_and_hospitals
- Option stopping non-sea detector units from revealing invisible sea units and vice-versa, named no_cross_shore_detection
- Do not apply all-units special retreat rule to immobile units
- Group foreign units on the right-click menu based only on their surface characteristics
- Fix charm flag controlling PTW arty targeting not working for reloaded games
- Fix building unit prereqs interfering with unit limits
- Fix double despawn of barb unit entering city after hit by lethal ZoC
- Fix incorrect ETAs shown for one tile paths when railroad movement is limited

* RELEASE 20
- Remove city improvement limit
  - Controlled by config option remove_city_improvement_limit
- Polish precision striking by cruise missiles
  - Now plays the correct animations and despawns the unit afterward
  - Controlled by the polish_precision_striking config option, which used to be named polish_non_air_precision_striking
- Enable cruise missiles to perform stealth attack bombard
- Add ability to perfume technologies and governments
  - Options named technology_perfume and government_perfume, respectively