@@ -695,6 +695,9 @@ inlead,	   0x420F20,	0x422480,	0x420FA0,	"City_Form_draw_border_around_workable_
 repl call, 0x421095,	0x4225EF,	0x421115,	"Main_Screen_Form_t2s_coords_to_draw_yields",	""
 repl call, 0x420FC5,	0x422525,	0x421045,	"Map_get_tile_for_work_area_drawing",		""
 repl call, 0x420DA2,	0x4222F8,	0x420E22,	"Map_get_tile_for_work_area_drawing",		""
+repl call, 0x5DA3BE,	0x5E992D,	0x5DA2EE,	"City_stop_working_polluted_tile",		""
+repl vptr, 0x66DCB0,	0x68AD94,	0x66DCB0,	"City_manage_by_governor",			"void (__fastcall *) (City * this, int edx, bool param_1)"
+define,	   0x5DA3CC,	0x5E993B,	0x5DA2FC,	"ADDR_MANAGE_CITY_AFTER_POLLUTION_RETURN",	"int"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
