@@ -118,6 +118,10 @@ compact_strategic_resource_display_on_city_screen = false
 ; know which buildings replace which.
 warn_when_chosen_building_would_replace_another = false
 
+; This option keeps citizens working the tiles they've been assigned to when pollution spawns there instead of converting them to specialists. This
+; reduces micromanage but comes at the cost of the specialist yields.
+do_not_unassign_workers_from_polluted_tiles = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
